# cmake_test

./: .gitignore  CMakeLists.txt  README.md  compile.bash  run_hello.bash
doc/: hello.txt
include/: hello.h
install/hello/doc/: hello.txt
install/hello/lib/: libhello.so.1.0
lib/: CMakeLists.txt  hello.c
share/cmake/hello/: FindHELLO.cmake
src/: CMakeLists.txt  main.c
